--- a/main.css
+++ b/main.css
@@ -1,3 +1,26 @@
 .fa-brands{
     font-size: 25px;
 }
+.aw-rasm{
+    border-radius: 20px;
+}
+
+.rasm-2{
+    width: 50px;
+}
+
+.aw-box {
+    font-size: 23px;
+}
+
+.aw-rasm-2{
+    width: 35px;
+}
+
+.aw-ras{
+    width: 45px;
+}
+
+.aw-rasmm{
+    width: 45px;
+}
